<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.almondtools</groupId>
	<artifactId>stringbench</artifactId>
	<version>0.2.0-SNAPSHOT</version>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<uberjar.name>benchmarks</uberjar.name>
	</properties>

	<repositories>
		<repository>
			<id>eaio.com</id>
			<url>http://repo.eaio.com/maven2</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.simpleflatmapper</groupId>
			<artifactId>sfm-csv</artifactId>
			<version>8.2.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>ST4</artifactId>
			<version>4.3.1</version>
		</dependency>

		<dependency>
			<groupId>com.eaio.stringsearch</groupId>
			<artifactId>stringsearch</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.ahocorasick</groupId>
			<artifactId>ahocorasick</artifactId>
			<version>0.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.roklenarcic</groupId>
			<artifactId>aho-corasick</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>net.byteseek</groupId>
			<artifactId>byteseek</artifactId>
			<version>2.0.3</version>
		</dependency>
		<dependency>
			<groupId>net.amygdalum</groupId>
			<artifactId>stringsearchalgorithms</artifactId>
			<version>0.4.3</version>
		</dependency>
		<dependency>
			<groupId>com.hankcs</groupId>
			<artifactId>aho-corasick-double-array-trie</artifactId>
			<version>1.2.2</version>
		</dependency>
		
		
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.26</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.26</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				 <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
					<excludes>
						<exclude>**/incubation/**/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>${uberjar.name}</finalName>
							<artifactSet>
								<excludes>
									<exclude>com.github.almondtools:comtemplate:jar:</exclude>
									<exclude>com.github.almondtools:picklock:jar:</exclude>
									<exclude>com.github.almondtools:conmatch:jar:</exclude>
								</excludes>
							</artifactSet>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.openjdk.jmh.Main</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>com/almondtools/stringbench/analyzer/**</exclude>
									</excludes>
								</filter>
								<filter>
									<!-- Shading signed JARs will fail without this. http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar -->
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>